# dnslib

./: .travis.yml  ProjectHome.md  README.rst  README.txt  build.sh
.github/workflows/: cmake.yml
src/: CMakeLists.txt  buffer.cpp  buffer.h  dns.h  exception.h  fakecli.cpp  fakesrv.cpp  message.cpp  message.h  qs.cpp  qs.h  rr.cpp  rr.h  unittests.cpp
trunk/src/: CMakeLists.txt  buffer.cpp  buffer.h  dns.h  exception.h  fakecli.cpp  fakesrv.cpp  main.cpp  message.cpp  message.h  qs.h  rr.cpp  rr.h  unittests.cpp
